--- a/Lab_1.ipynb
+++ b/Lab_1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1EROTxwGEUNCSNpOc5bSkNHVAyfLUww-v",
-      "authorship_tag": "ABX9TyPDP/WziWBr7L8tciGx/W58",
+      "authorship_tag": "ABX9TyO/Hnl66Nsm/ujzEQItcegD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -479,7 +479,7 @@
     {
       "cell_type": "code",
       "source": [
-        "df1 = pd.read_table(\"/pp.txt\")\n",
+        "df1 = pd.read_table(\"/content/drive/MyDrive/pp.txt\")\n",
         "df1.head()"
       ],
       "metadata": {
@@ -488,9 +488,9 @@
           "height": 175
         },
         "id": "AriE0I7e4jcG",
-        "outputId": "bb4da3da-7f9b-4ac4-e1a5-4ba4589b5229"
+        "outputId": "923b3016-cc0f-45bb-ec2d-9a35f9e2e4fa"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +504,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3e72519a-4e48-4398-93ff-e2ed5b8ba9f0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-05cdfdba-e8ba-4b26-8593-cfff38ccadf7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -549,7 +549,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3e72519a-4e48-4398-93ff-e2ed5b8ba9f0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05cdfdba-e8ba-4b26-8593-cfff38ccadf7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -601,12 +601,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3e72519a-4e48-4398-93ff-e2ed5b8ba9f0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-05cdfdba-e8ba-4b26-8593-cfff38ccadf7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3e72519a-4e48-4398-93ff-e2ed5b8ba9f0');\n",
+              "        const element = document.querySelector('#df-05cdfdba-e8ba-4b26-8593-cfff38ccadf7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -626,8 +626,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5f0f6e9c-4ce6-4996-b8e4-62b8583030d5\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5f0f6e9c-4ce6-4996-b8e4-62b8583030d5')\"\n",
+              "<div id=\"df-37d4e7e1-5d5b-43cd-a66b-a3b4b20bc6a0\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-37d4e7e1-5d5b-43cd-a66b-a3b4b20bc6a0')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -746,7 +746,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5f0f6e9c-4ce6-4996-b8e4-62b8583030d5 button');\n",
+              "        document.querySelector('#df-37d4e7e1-5d5b-43cd-a66b-a3b4b20bc6a0 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -763,14 +763,14 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 11
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "data2 = pd.read_csv(\"/Spd.csv\")\n",
+        "data2 = pd.read_csv(\"//content/drive/MyDrive/Spd.csv\")\n",
         "data2.head()"
       ],
       "metadata": {
@@ -779,9 +779,9 @@
           "height": 226
         },
         "id": "W3wRB7SP43tx",
-        "outputId": "3e9e8665-1f9c-44c7-9b06-42eeed366fe7"
+        "outputId": "1abeb937-ce9c-4384-e48f-182bcdf14318"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9e09afe1-d174-4e8e-b78b-14d491cf8cfa\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-991ed3d6-a36a-48fe-bdc3-72cc7d178bc6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -943,7 +943,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9e09afe1-d174-4e8e-b78b-14d491cf8cfa')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-991ed3d6-a36a-48fe-bdc3-72cc7d178bc6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -995,12 +995,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9e09afe1-d174-4e8e-b78b-14d491cf8cfa button.colab-df-convert');\n",
+              "        document.querySelector('#df-991ed3d6-a36a-48fe-bdc3-72cc7d178bc6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9e09afe1-d174-4e8e-b78b-14d491cf8cfa');\n",
+              "        const element = document.querySelector('#df-991ed3d6-a36a-48fe-bdc3-72cc7d178bc6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1020,8 +1020,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c80b047f-a89f-4025-b404-a882420f68b4\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c80b047f-a89f-4025-b404-a882420f68b4')\"\n",
+              "<div id=\"df-7c3ee218-eac4-48c6-af2b-86e4474b6296\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7c3ee218-eac4-48c6-af2b-86e4474b6296')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1140,7 +1140,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c80b047f-a89f-4025-b404-a882420f68b4 button');\n",
+              "        document.querySelector('#df-7c3ee218-eac4-48c6-af2b-86e4474b6296 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1157,25 +1157,25 @@
             }
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 12
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "data3 = pd.read_excel(\"/Historicalinvesttemp.xlsx\")\n",
+        "data3 = pd.read_excel(\"/content/drive/MyDrive/Historicalinvesttemp.xlsx\")\n",
         "data3.head()"
       ],
       "metadata": {
         "id": "YPif7VzE5sJB",
-        "outputId": "e1757504-fe3a-4537-8835-e2f302134ca2",
+        "outputId": "a59ed896-23bf-47e4-95f8-8b479af8d72b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1190,7 +1190,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6197a735-ea21-4d19-9d9f-4357f4e434fb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-78a68996-6b59-4518-a47f-e126231f2e76\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1257,7 +1257,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6197a735-ea21-4d19-9d9f-4357f4e434fb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-78a68996-6b59-4518-a47f-e126231f2e76')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1309,12 +1309,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6197a735-ea21-4d19-9d9f-4357f4e434fb button.colab-df-convert');\n",
+              "        document.querySelector('#df-78a68996-6b59-4518-a47f-e126231f2e76 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6197a735-ea21-4d19-9d9f-4357f4e434fb');\n",
+              "        const element = document.querySelector('#df-78a68996-6b59-4518-a47f-e126231f2e76');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1334,8 +1334,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-a3573041-ee56-4977-b8f8-4f82876cf123\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a3573041-ee56-4977-b8f8-4f82876cf123')\"\n",
+              "<div id=\"df-369abc27-90eb-4883-9f94-588cd9a6621d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-369abc27-90eb-4883-9f94-588cd9a6621d')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1454,7 +1454,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-a3573041-ee56-4977-b8f8-4f82876cf123 button');\n",
+              "        document.querySelector('#df-369abc27-90eb-4883-9f94-588cd9a6621d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1471,7 +1471,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
